--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,20 @@
   "configurations": [
     {
       "type": "java",
+      "name": "Launch App",
+      "request": "launch",
+      "mainClass": "java.App",
+      "projectName": "pipe-filter"
+    },
+    {
+      "type": "java",
+      "name": "Launch App",
+      "request": "launch",
+      "mainClass": "App",
+      "projectName": "pipe-filter"
+    },
+    {
+      "type": "java",
       "name": "Launch TextFileReader",
       "request": "launch",
       "mainClass": "TextFileReader",
